--- a/Resources/Private/Templates/Page/Default.html
+++ b/Resources/Private/Templates/Page/Default.html
@@ -5,7 +5,10 @@
     <head>
 	<f:section name="meta">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes">
-		<meta name="author" content="Gerhard Syring-Lingenfelder (www.g-sl.de); Jan Syring-Lingenfelder (www.jan-sl.de)" />
+                <meta name="author" content="Gerhard Syring-Lingenfelder" />
+                <meta name="keywords" content="Duttweiler,Neustadt,Weinstraße,Pfalz,Wein,Sport,Tischtennis,TT,VFL,Fußball,Vereine,Veranstaltungen,Schwimmbad,Syring,Syring-Lingenfelder" />
+                <meta name="description" content="Herzlich Willkommen in Duttweiler, einem Ortsteil von Neustadt an der Weinstraße in der Pfalz" />
+                <meta name="generator" content="neos - The next generation CMS - neos.io | powered by Jan Syring-Lingenfelder - www.jan-sl.de" />
 	</f:section>
 	<f:section name="stylesheets">
 		<link rel="stylesheet" type="text/css" href="{f:uri.resource(path: 'Scripts/fancybox/jquery.fancybox.css', package: 'GSL.DuttweilerDe')}" />
