jquery smartbanner bugfixes

--- a/Resources/Private/Templates/Page/Frontpage.html
+++ b/Resources/Private/Templates/Page/Frontpage.html
@@ -68,6 +68,8 @@
           title: 'DuttweilerApp',
           author: 'Jan Syring-Lingenfelder',
           button: 'Installieren',
+	  inGooglePlay: 'bei Google Play',
+	  icon: 'http://www.duttweiler.de/wappen/wappen8.gif',
           price: 'Kostenlos'
         })
       })
