--- a/Resources/Public/Styles/Common.css
+++ b/Resources/Public/Styles/Common.css
@@ -1,11 +1,11 @@
-body { font-family: verdana, geneva, arial; font-size: 9pt; margin-top: 5px; background-color: #fff; background-image: url("../Images/back_gn.gif"); background-repeat: repeat-x; line-height: 14pt; }
+body { font-family: verdana, geneva, arial; font-size: 9pt; background-color: #fff; background-image: url("../Images/back_gn.gif"); background-repeat: repeat-x; line-height: 14pt; }
 
 .clearfix { clear: both; width: 100%; }
 
 a { color: #363; text-decoration: none; }
 a:hover { text-decoration: underline; }
 
-#Wrapper { margin: 0 auto; border: 2px solid #363; }
+#Wrapper { margin: 5px auto; border: 2px solid #363; }
 @media screen and (min-width: 820px) {
 #Wrapper { width: 800px; }
 }
