--- a/Resources/Public/Styles/Common.css
+++ b/Resources/Public/Styles/Common.css
@@ -22,6 +22,7 @@ div.typo3-neos-nodetypes-image figure.typo3-neos-alignment-left { margin-right: 
 div.typo3-neos-nodetypes-image figure.typo3-neos-alignment-right { margin-left: 10px; }
 
 .typo3-neos-nodetypes-twocolumn > div, .typo3-neos-nodetypes-threecolumn > div, .typo3-neos-nodetypes-fourcolumn > div { margin: 0; float: left; }
+.typo3-neos-nodetypes-twocolumn, .typo3-neos-nodetypes-threecolumn, .typo3-neos-nodetypes-fourcolumn { clear: both; }
 .columns-50-50 > div.column { width: 50%; }
 .columns-25-75 > div.column:nth-child(1) { width: 25%; }
 .columns-25-75 > div.column:nth-child(2) { width: 75%; }
