--- a/Resources/Public/Styles/Common.css
+++ b/Resources/Public/Styles/Common.css
@@ -21,6 +21,12 @@ a:hover { text-decoration: underline; }
 div.typo3-neos-nodetypes-image figure.typo3-neos-alignment-left { margin-right: 10px; }
 div.typo3-neos-nodetypes-image figure.typo3-neos-alignment-right { margin-left: 10px; }
 
+div.neos-contentcollection table { border-collapse: collapse; }
+div.neos-contentcollection table, div.neos-contentcollection table th, div.neos-contentcollection table td { border: 1px solid black; }
+div.neos-contentcollection table th, div.neos-contentcollection table td { padding: 0 10px; text-align: left; }
+div.neos-contentcollection table tr:nth-child(even) { background-color: #eee; }
+div.neos-contentcollection table th { background-color: #363; color: white; }
+
 .typo3-neos-nodetypes-twocolumn > div, .typo3-neos-nodetypes-threecolumn > div, .typo3-neos-nodetypes-fourcolumn > div { margin: 0; float: left; }
 .columns-50-50 > div.column { width: 50%; }
 .columns-25-75 > div.column:nth-child(1) { width: 25%; }
