--- a/Resources/Private/Templates/Page/Default.html
+++ b/Resources/Private/Templates/Page/Default.html
@@ -40,10 +40,13 @@
                 </nav> 
                 <div id="PageHeadingContent">
                     <div id="PageArticleDate">
-                        {date -> f:format.date(localeFormatType: 'date', forceLocale: 'de_DE', localeFormatLength: 'long')}
+                        <f:if condition="{isChronikItem}">
+				<f:then>{date -> f:format.date(localeFormatType: 'date', forceLocale: 'de_DE', localeFormatLength: 'long')}</f:then>
+				<f:else>{neos:contentElement.editable(property: 'subheader')}</f:else>
+			</f:if>
                     </div> 
                     <div id="PageArticleHeading">
-                        <header>{header}</header>
+                        <header>{neos:contentElement.editable(property: 'header')}</header>
                     </div>
                 </div>
                 <f:if condition="{headerImage}">
@@ -70,8 +73,8 @@
             </div>            
             <div id="PageBody">
                 <article>
-                    <f:if condition="{subheader} != ''">
-                        <header>{subheader}</header>
+                    <f:if condition="{isChronikItem}">
+                        <header>{neos:contentElement.editable(property: 'subheader')}</header>
                     </f:if>
                     
                     {content.main -> f:format.raw()}
