--- a/Resources/Private/Templates/NodeTypes/AbisZMenu.html
+++ b/Resources/Private/Templates/NodeTypes/AbisZMenu.html
@@ -1,7 +1,7 @@
 {namespace neos=TYPO3\Neos\ViewHelpers}
 {namespace ts=TYPO3\TypoScript\ViewHelpers}
 <nav{attributes -> f:format.raw()}>
-	<ul>
+	<ul style="padding-left: 0;">
 		<f:render section="itemsList" arguments="{items: items}" />
 	</ul>
 </nav>
@@ -10,16 +10,18 @@
 	<f:if condition="{items -> f:count()}">
 		<f:then>
 			<f:for each="{items}" as="item">
-			  <f:if condition="{item.isHeading}">
-			    <f:then> <f:render partial="AbisZHeadline" arguments="{title: item.label}" /> </f:then>
-			    <f:else>	
-				<li{ts:render(path:'{item.state}.attributes', context: {item: item}) -> f:format.raw()}>
-				<neos:link.node node="{item.node}">{item.label}</neos:link.node>
+			  <f:if condition="{item.menuLevel} == 1">
+			    <f:then>
+				<f:render partial="AbisZHeadline" arguments="{title: item.label}" />
 				<f:if condition="{item.subItems}">
 					<ul>
 						<f:render section="itemsList" arguments="{items: item.subItems}" />
 					</ul>
 				</f:if>
+			    </f:then>
+			    <f:else>	
+				<li{ts:render(path:'{item.state}.attributes', context: {item: item}) -> f:format.raw()}>
+				<neos:link.node node="{item.node}">{item.label}</neos:link.node>
 				</li>
 			    </f:else>
 			  </f:if>
