Revert "fixes #34 image sizing on front page"; should do that in Frontpage.css
This reverts commit a9899522aef06e160b5a00806203b1396a377ae2.

--- a/Resources/Private/Templates/NodeTypes/FrontpageNewsItem.html
+++ b/Resources/Private/Templates/NodeTypes/FrontpageNewsItem.html
@@ -6,7 +6,7 @@
 	<div class="NewsItemSubheading">{subheadline}</div>
 	<div class="NewsItemBody">
         <f:if condition="{image}">
-            <img class="typo3-neos-alignment-right" style="height: 150px" src="{media:uri.image(image: image)}" alt="{imageAlternativeText}" />
+            <img class="typo3-neos-alignment-right" height="150" src="{media:uri.image(image: image)}" alt="{imageAlternativeText}" />
         </f:if>
 	<f:if condition="{isStandalone}">
 	 <f:then> {neos:contentElement.editable(property: 'text')} </f:then>
