--- a/Resources/Public/Styles/Frontpage.css
+++ b/Resources/Public/Styles/Frontpage.css
@@ -33,6 +33,7 @@ article.FrontpageNewsItem header { color: #363; font-weight: bold; font-size: 11
 .NewsItemDate { color: #808080; font-size: 8pt; padding: 2px 0; }
 .NewsItemSubheading { font-weight: bold; font-size: 9pt; }
 .NewsItemBody { font-size: 9pt; }
+.NewsItemBody img { max-height: 150px; }
 
 #RightColumn .InfoBoxHeading { background-color: #363; padding: 4px; color: #fff; font-weight: bold; }
 #RightColumn .InfoBoxImportant { background-color: #F00 !important; }
