Add ImageGallery Node; fixes #31

--- a/Resources/Public/Styles/Common.css
+++ b/Resources/Public/Styles/Common.css
@@ -76,4 +76,6 @@ div.typo3-neos-nodetypes-textwithimage table th
 
 img { border: 0; max-width: 100%; height: auto; display: inline-block; vertical-align: middle; }
 
+.gsl-duttweilerde-multipleimages figure { float: left; margin: 15px; }
+
 .back-to-top { background: #363; color: white; position: fixed; bottom: 20px; right: 20px; padding: 1em; }
