--- a/Resources/Private/Templates/Page/Default.html
+++ b/Resources/Private/Templates/Page/Default.html
@@ -30,7 +30,7 @@
     <body>
 	<f:section name="body">
         <div id="Wrapper">
-            <div id="PageHeading">
+            <div id="PageHeading" style="background-image:url('{f:uri.resource(path: 'Images/b-logo05.jpg', package: 'GSL.DuttweilerDe')}');">
                 <nav id="RelatedPagesTopMenu">
                     <ul>
                         <li><neos:link.node node="~/">Duttweiler</neos:link.node></li>
