Revert "move PageHeading background-image from css to html"; use css as fallback
This reverts commit 325c3b2fa637b5c20e6e45af22c008c437df2f6b.

--- a/Resources/Private/Templates/Page/Default.html
+++ b/Resources/Private/Templates/Page/Default.html
@@ -30,7 +30,7 @@
     <body>
 	<f:section name="body">
         <div id="Wrapper">
-            <div id="PageHeading" style="background-image:url('{f:uri.resource(path: 'Images/b-logo05.jpg', package: 'GSL.DuttweilerDe')}');">
+            <div id="PageHeading">
                 <nav id="RelatedPagesTopMenu">
                     <ul>
                         <li><neos:link.node node="~/">Duttweiler</neos:link.node></li>
