--- a/Resources/Private/Templates/Page/Frontpage.html
+++ b/Resources/Private/Templates/Page/Frontpage.html
@@ -29,7 +29,7 @@
     <body>
 	<f:section name="body">
         <div id="Wrapper">
-            <div id="PageHeading" style="background-image:url('{f:uri.resource(path: 'Images/b-logo-xxx.jpg', package: 'GSL.DuttweilerDe')}');">
+            <div id="PageHeading">
 		<div id="menuButton"><img src="{f:uri.resource(path: 'Images/menu_icon.svg', package: 'GSL.DuttweilerDe')}" height="30" width="30" alt="Menu" /></div>
                 <nav id="IndexPageTopMenu">
 			{parts.menu -> f:format.raw()}
