--- a/Resources/Private/Templates/Page/Frontpage.html
+++ b/Resources/Private/Templates/Page/Frontpage.html
@@ -29,7 +29,10 @@
     <body>
 	<f:section name="body">
         <div id="Wrapper">
-            <div id="PageHeading">
+	    <f:if condition="{headerBackgroundImage}">
+	    <f:then> <div id="PageHeading" style="background-image:url('{f:uri.resource(resource: headerBackgroundImage.resource)}');" > </f:then>
+	    <f:else> <div id="PageHeading"> </f:else>
+	    </f:if>
 		<div id="menuButton"><img src="{f:uri.resource(path: 'Images/menu_icon.svg', package: 'GSL.DuttweilerDe')}" height="30" width="30" alt="Menu" /></div>
                 <nav id="IndexPageTopMenu">
 			{parts.menu -> f:format.raw()}
