--- a/Resources/Private/Templates/Page/Default.html
+++ b/Resources/Private/Templates/Page/Default.html
@@ -30,7 +30,10 @@
     <body>
 	<f:section name="body">
         <div id="Wrapper">
-            <div id="PageHeading">
+	    <f:if condition="{headerBackgroundImage}">
+	    <f:then> <div id="PageHeading" style="background-image:url('{f:uri.resource(resource: headerBackgroundImage.resource)}');" > </f:then>
+	    <f:else> <div id="PageHeading" else> </f:else>
+	    </f:if>
                 <nav id="RelatedPagesTopMenu">
                     <ul>
                         <li><neos:link.node node="~/">Duttweiler</neos:link.node></li>
