--- a/Resources/Private/Templates/API/EventsItem.html
+++ b/Resources/Private/Templates/API/EventsItem.html
@@ -5,7 +5,7 @@
 	"host": "{host}",
 	"location": "{location}",
 	<f:if condition="{promote}">"promote": "{promote}",</f:if>
-	<f:if condition="{link}">"link": "{neos:uri.node(node: link, format: html)}",</f:if>
+	<f:if condition="{link}">"link": "{neos:uri.node(node: link, format: 'html')}",</f:if>
 	"startDate": "{startDate -> f:format.date(format: 'd.m.y H:i')}",
 	"endDate": "{endDate -> f:format.date(format: 'd.m.y H:i')}"
 }
