change default page template; fixes #38 don't show empty subheadlines

--- a/Resources/Private/Templates/Page/Default.html
+++ b/Resources/Private/Templates/Page/Default.html
@@ -76,9 +76,9 @@
             </div>            
             <div id="PageBody">
                 <article>
-                    <f:if condition="{isChronikItem}">
+                    <f:if condition="{isChronikItem}"> <f:if condition="{subheader} != ''">
                         <header>{neos:contentElement.editable(property: 'subheader')}</header>
-                    </f:if>
+                    </f:if> </f:if>
                     
                     {content.main -> f:format.raw()}
                     
