add css class to subheadline for ChronikItems

--- a/Resources/Private/Templates/Page/Default.html
+++ b/Resources/Private/Templates/Page/Default.html
@@ -77,7 +77,7 @@
             <div id="PageBody">
                 <article>
                     <f:if condition="{isChronikItem}"> <f:if condition="{subheader} != ''">
-                        <header>{neos:contentElement.editable(property: 'subheader')}</header>
+                        <header class="underline">{neos:contentElement.editable(property: 'subheader')}</header>
                     </f:if> </f:if>
                     
                     {content.main -> f:format.raw()}
