--- a/Resources/Private/Templates/API/NewsItem.html
+++ b/Resources/Private/Templates/API/NewsItem.html
@@ -5,7 +5,7 @@
 	"headline": "{headline}",
 	"subheadline": "{subheadline}",
 	"date": "{date -> f:format.date(localeFormatType: 'date', forceLocale: 'de_DE')}",
-	"text": "{text -> f:format.htmlspecialchars() -> f:format.nl2br()}",
+	"text": "{text -> f:format.raw()}",
 	<f:if condition="{image}">
 	"imageUrl": "{media:uri.image(image: image)}",
 	"imageAlternativeText": "{imageAlternativeText}",
