move imprint link to the top

--- a/Resources/Private/Templates/Page/Default.html
+++ b/Resources/Private/Templates/Page/Default.html
@@ -38,6 +38,7 @@
                     <ul>
                         <li><neos:link.node node="~/">Duttweiler</neos:link.node></li>
                         <li><neos:link.node node="~/node-551c040d4ec10" /></li>
+                	<li><neos:link.node node="~/node-551c18d727cba" /></li>
                         <div class="clearfix"></div>
                     </ul>
                 </nav> 
@@ -72,7 +73,6 @@
                         </f:if>
                     </ul>
                 </nav>   
-                <div id="PageHeadingImprintLink"><neos:link.node node="~/node-551c18d727cba" /></div>
             </div>            
             <div id="PageBody">
                 <article>
