--- a/Resources/Private/Templates/Page/Error.html
+++ b/Resources/Private/Templates/Page/Error.html
@@ -1,4 +1,4 @@
-{namespace neos=TYPO3\Neos\ViewHelpers}
+﻿{namespace neos=TYPO3\Neos\ViewHelpers}
 <f:layout name="Default" />
 
 <f:section name="head">
@@ -14,7 +14,7 @@
 		<link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
 
         <meta charset="utf-8" />
-        <title>Duttweiler/Pfalz</title>
+        <title>Seite nicht gefunden - Duttweiler/Pfalz</title>
 </f:section>
 
 <f:section name="body">
@@ -22,8 +22,9 @@
     <div id="PageHeading">
 	<nav id="RelatedPagesTopMenu">
 	    <ul>
-		<li><a href="/">Duttweiler</a></li>
-		<li><a href="/a-bis-z.html">A bis Z</a></li>
+		    <li><a href="/">Duttweiler</a></li>
+		    <li><a href="/a-bis-z.html">A bis Z</a></li>
+            <li><a href="/impressum.html">Impressum</a></li>
 		<div class="clearfix"></div>
 	    </ul>
 	</nav> 
@@ -40,12 +41,11 @@
 	    <ul>
 		<li><a href="javascript:history.back();">&laquo;</a></li>
 	    </ul>
-	</nav>   
-	<div id="PageHeadingImprintLink"><a href="/impressum.html">Impressum</a></div>
+	</nav>  
     </div>            
     <div id="PageBody">
 	<article>
-	    <header>Fehler 404</header>
+	    <header class="underline">Fehler 404</header>
 	    <i class="fa fa-exclamation-triangle" style="color: #ff460d; font-size: large"></i>
 	    Die angeforderte Seite wurde nicht gefunden.
 	    <p>Sie können jetzt <a href="javascript:history.back();">einen Schritt zurück</a>, <a href="/">zurück auf Los</a>, oder sie suchen mal im <a href="/a-bis-z.html">A bis Z</a>.</p>
