change smartbanner icon; fixes #51

--- a/Resources/Private/Templates/Page/Frontpage.html
+++ b/Resources/Private/Templates/Page/Frontpage.html
@@ -72,7 +72,7 @@
           author: 'Jan Syring-Lingenfelder',
           button: 'Installieren',
 	  inGooglePlay: 'bei Google Play',
-	  icon: 'http://www.duttweiler.de/wappen/wappen8.gif',
+	  icon: 'http://static.duttweiler-net.de/wappen/wappen8.gif',
           price: 'Kostenlos'
         })
       })
