--- a/Resources/Public/Styles/Common.css
+++ b/Resources/Public/Styles/Common.css
@@ -79,3 +79,16 @@ img { border: 0; max-width: 100%; height: auto; display: inline-block; vertical-
 .gsl-duttweilerde-multipleimages figure { float: left; margin: 15px; }
 
 .back-to-top { background: #363; color: white; position: fixed; bottom: 20px; right: 20px; padding: 1em; }
+
+
+.typo3-neos-nodetypes-text ol.neos-list-decimal { list-style-type: decimal; }
+.typo3-neos-nodetypes-text ol.neos-list-decimal-leading-zero { list-style-type: decimal-leading-zero; }
+.typo3-neos-nodetypes-text ol.neos-list-lower-roman { list-style-type: lower-roman; }
+.typo3-neos-nodetypes-text ol.neos-list-upper-roman { list-style-type: upper-roman; }
+.typo3-neos-nodetypes-text ol.neos-list-lower-greek { list-style-type: lower-greek; }
+.typo3-neos-nodetypes-text ol.neos-list-lower-latin { list-style-type: lower-latin; }
+.typo3-neos-nodetypes-text ol.neos-list-upper-latin { list-style-type: upper-latin; }
+
+.typo3-neos-nodetypes-text ul.neos-list-disc { list-style-type: disc; }
+.typo3-neos-nodetypes-text ul.neos-list-circle { list-style-type: circle; }
+.typo3-neos-nodetypes-text ul.neos-list-square { list-style-type: square; }
