change be module heading

--- a/Resources/Private/Templates/Module/DuttweilerApp/DigitalShoutout/Index.html
+++ b/Resources/Private/Templates/Module/DuttweilerApp/DigitalShoutout/Index.html
@@ -3,7 +3,7 @@
 
 <f:section name="subtitle">
     <div class="neos-module-container">
-        <h2>Eine "Digitale Durchsage" machen</h2>
+        <legend>Eine "Digitale Durchsage" machen</legend>
     </div>
 </f:section>
 
