display message if no pending notifications are listed

--- a/Resources/Private/Templates/Module/DuttweilerApp/NotificationReview/Index.html
+++ b/Resources/Private/Templates/Module/DuttweilerApp/NotificationReview/Index.html
@@ -9,27 +9,34 @@
 
 <f:section name="content">
     <div class="neos-row-fluid">
-        <table class="neos-table">
-            <thead>
-                <tr>
-                    <th>Meldung</th>
-                    <th>Datum</th>
-                    <th>Generiert am</th>
-                    <th>&nbsp;</th>
-                </tr>
-            </thead>
-            <f:for each="{pendingNotifications}" as="notification">
-                <tr>
-                    <td><h3>{notification.heading}</h3>{notification.subheading}</td>
-                    <td>{notification.date -> f:format.date()}</td>
-                    <td>{notification.issueDate -> f:format.date()}</td>
-                    <td class="neos-action">
-                        <f:link.action action="send" arguments="{notificationId: notification.id}" class="neos-button neos-button-success neos-pull-right"><i class="icon-ok icon-white"></i></f:link.action>
-                        <f:link.action action="discard" arguments="{notificationId: notification.id}" class="neos-button neos-button-danger neos-pull-right"><i class="icon-trash icon-white"></i></f:link.action>
-                    </td>
-                </tr>
-            </f:for>
-        </table>
+        <f:if condition="{pendingNotifications}">
+            <f:then>
+                <table class="neos-table">
+                    <thead>
+                        <tr>
+                            <th>Meldung</th>
+                            <th>Datum</th>
+                            <th>Generiert am</th>
+                            <th>&nbsp;</th>
+                        </tr>
+                    </thead>
+                    <f:for each="{pendingNotifications}" as="notification">
+                        <tr>
+                            <td><h3>{notification.heading}</h3>{notification.subheading}</td>
+                            <td>{notification.date -> f:format.date()}</td>
+                            <td>{notification.issueDate -> f:format.date()}</td>
+                            <td class="neos-action">
+                                <f:link.action action="send" arguments="{notificationId: notification.id}" class="neos-button neos-button-success neos-pull-right"><i class="icon-ok icon-white"></i></f:link.action>
+                                <f:link.action action="discard" arguments="{notificationId: notification.id}" class="neos-button neos-button-danger neos-pull-right"><i class="icon-trash icon-white"></i></f:link.action>
+                            </td>
+                        </tr>
+                    </f:for>
+                </table>
+            </f:then>
+            <f:else>
+                <p>Es liegen keine Benachrichtigungen auf Halde.</p>
+            </f:else>
+        </f:if>
     </div>
     <div class="neos-footer">
         <neos:link.module path="duttweilerapp" class="neos-button">{neos:backend.translate(id: 'cancel', value: 'Cancel')}</neos:link.module>
